<resources>
    <string name="app_name">BMI-Calc</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="copyR">About</string>
    <string name="submit">Submit</string>
    <string name="noRecords">No Records</string>
    <string name="clearAllRec">Clear your BMI data</string>
    <string name="uSure">Are you sure?</string>
    <string name="iunderstand">Clear</string>
    <string name="imSure">I\'m Sure</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="currentheight">Current Height: </string>
    <string name="bmiheader">BMI Calculator</string>
    <string name="enterW">Enter your weight</string>
    <string name="kg">KG</string>
    <string name="enterN">Please, can i have your name?</string>
    <string name="enterH">Enter height</string>
    <string name="firstTime">Hey you, you\'re finally awake</string>
    <string name="welcomeBack">Welcome back</string>
    <string name="areUreadyVar">Are you ready %1$s</string>
    <string name="secondFragmentIntro">Let\'s calculate that body mass</string>
    <string name="sureExit">Click again to exit</string>
    <string name="cantEscape">You can\'t escape your destiny</string>
    <string name="title_activity_settings">Settings</string>
    <string name="resultHeader">Looking good there %1$s</string>
    <string name="resultContent">Your Current BMI:</string>
    <string name="latestMesa">Your history:</string>
    <string name="HomeBtn">Home</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>