<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultFragment">


    <TextView
        android:id="@+id/twResultIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultHeader"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/twResultHistoryT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/twResultContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultContent"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/twResultHistoryT"
        app:layout_constraintEnd_toStartOf="@+id/twCurrentBmi"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twResultIntro" />

    <TextView
        android:id="@+id/twCurrentBmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noRecords"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/twResultHistoryT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/twResultContent"
        app:layout_constraintTop_toBottomOf="@+id/twResultIntro" />

    <TextView
        android:id="@+id/twResultHistoryT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latestMesa"
        android:textSize="22sp"
        android:layout_marginBottom="65dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--<TextView
        android:id="@+id/twResultHisData"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:text="@string/noRecords"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonRetunHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twResultHistoryT" />-->

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graphView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonRetunHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twResultHistoryT" />

    <Button
        android:id="@+id/buttonRetunHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:text="@string/HomeBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>